--- a/registration_app/views/homepage.html
+++ b/registration_app/views/homepage.html
@@ -1,10 +1,55 @@
+<!DOCTYPE html>
 <html>
-   <body>
-      
-      <form action = "/submit" method = "POST">
-         Aadhar number: <input type="number" name="aadhar_number">  <br> <br>
-         Email Id: <input type="email" id="email_id" name="email_id"> <br> <br>
-         <input type = "submit" value = "Submit" >
+  <head>
+<style type="text/css">
+body {
+	
+	background-image: url("pineapple.jpg");
+
+}
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #008000;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 25px;
+  padding: 20px;
+  width: 120px;
+  height:50px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.div{
+background-color: #FFFFFF;
+width: 600px;
+  height:300px;
+}
+
+</style>
+</head>
+<body>
+<h3>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<center>
+<div class = "div" >
+  <body>
+        <h2>
+          Welcome to Property Registration System!!!<br>
+          <h3>
+          Please Enter Your Details!!!
+       <h4>
+        <form action = "/submit" method = "POST">
+         Aadhar number: <input type="number" name="aadhar_number" placeholder="eg: 4xxx 5xxx xxxx xxxx">  <br> <br>
+         Email Id: <input type="email" id="email_id" name="email_id" placeholder="eg: xyz@yyy.com"> <br> <br>
+ 
+           <button class="button">Submit</button ><br>
       </form>     
-   </body>
-</html>
