--- a/registration_app/views/otp.html
+++ b/registration_app/views/otp.html
@@ -1,12 +1,54 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Form to verify Aadhaar Card</title>
-    </head>
-    <body>
-        <form action = "/otp" method = "POST">
-         OTP : <input type = "text" name = "otp">  <br>
-         <input type = "submit" value = "Submit" >
-        </form>
-    </body>
-</html>
+  <head>
+<style type="text/css">
+body {
+	
+	background-image: url("pineapple.jpg");
+
+}
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #008000;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 25px;
+  padding: 20px;
+  width: 110px;
+  height:45px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.div{
+background-color: #FFFFFF;
+width: 600px;
+  height:200px;
+}
+
+</style>
+</head>
+<body>
+<h3>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<center>
+<div class = "div" >
+  <body>
+        <h2>
+        <br>  
+          Please Enter The OTP You Received!!!<br>
+          
+       <h3>
+         <form action = "/otp" method = "POST">
+         OTP : <input type = "text" name = "otp" placeholder="eg: xxxx">  <br><br>
+         
+           <button class="button">Submit</button ><br>
+      </form>     
