--- a/registration_app/views/propertydetails.html
+++ b/registration_app/views/propertydetails.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html>
+   <head>
+<style type="text/css">
+body {
+	
+	background-image: url("land.jpg");
+
+}
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #008000;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 25px;
+  padding: 20px;
+  width: 120px;
+  height:60px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.div{
+background-color: #FFFFFF;
+width: 600px;
+  height:800px;
+}
+
+</style>
+</head>
 <body>
 <br>
 <br>
 <br>
 <center>
+ <div class = "div" >
 <h1>Welcome to Property Registration System!!!</h2>
 <br>
 <h2><p>Please Enter the property details to proceed</p>
@@ -60,7 +91,7 @@ Property Id: <input type="text" name="pid" placeholder="eg:survey no">
 
 <br>
 <br>
-<input type="submit" value="Sell">
+<button class="button">Sell</button>
 </form>
 
 
